# borescope

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  juju-borescope  juju-cascade  pyproject.toml  spread.yaml  tox.ini  workshop.yaml
.github/: CODEOWNERS  dependabot.yaml  zizmor.yml
.github/workflows/: ci.yaml  dependency-review.yaml  publish-test.yaml  publish.yaml  release.yaml  scorecard.yaml  security.yaml  spread.yaml  zizmor.yaml
.workshop/borescope-dev/: sdk.yaml
.workshop/borescope-dev/hooks/: check-health  setup-base  setup-project
demos/: here-mode.md  shell-less-rock.md  snap-store-media.md
demos/store/: _lib.sh  scene1-install.sh  scene1.cast  scene2-shellless.sh  scene2.cast  scene3-repl.sh  scene3.cast  scene4-snapshot.sh  scene4.cast  scene5-here.sh  scene5.cast
docs/: CNAME  README.md  index.html  llms.txt  openssf-best-practices-draft.md  style.css  tokens.css
docs/docs/: docs.css  explanation-architecture.html  explanation-architecture.md  explanation-scope.html  explanation-scope.md  explanation-transport.html  explanation-transport.md  howto-connect.html  howto-connect.md  howto-files.html  howto-files.md  howto-here.html  howto-here.md  howto-oneshot.html  howto-oneshot.md  howto-snapshot.html  howto-snapshot.md  index.html  index.md  reference-cli.html  reference-cli.md  reference-commands.html  reference-commands.md  reference-pebble.html  reference-pebble.md  tutorial.html  tutorial.md
docs/src/: _build.py  _site.yaml  explanation-architecture.md  explanation-scope.md  explanation-transport.md  howto-connect.md  howto-files.md  howto-here.md  howto-oneshot.md  howto-snapshot.md  index.md  reference-cli.md  reference-commands.md  reference-pebble.md  tutorial.md
docs/src/_templates/: page.html.j2
snap/: snapcraft.yaml
src/borescope/: __init__.py  __main__.py  cli.py  discovery.py  errors.py  juju.py  snap.py  snapshot.py
src/borescope/shell/: __init__.py  completion.py  context.py  history.py  output.py  parser.py  pathutils.py  repl.py  sanitise.py  theme.py
src/borescope/transport/: __init__.py  cli_transport.py  logs.py  relay.py  runner.py  socket_transport.py
src/cascade/: __init__.py  __main__.py  cli.py  discovery.py  errors.py  juju.py  snapshot.py
src/cascade/shell/: __init__.py  completion.py  context.py  history.py  parser.py  pathutils.py  repl.py  theme.py
src/cascade/transport/: __init__.py  cli_transport.py  relay.py  runner.py  socket_transport.py
tests/: conftest.py  test_args.py  test_cli.py  test_commands.py  test_completion.py  test_discovery.py  test_juju.py  test_logs.py  test_parser.py  test_pathutils.py  test_pebble_commands.py  test_proc_commands.py  test_registry.py  test_relay.py  test_repl.py  test_runner.py  test_sanitise.py  test_sanitize.py  test_snap.py  test_snapshot.py
tests/charms/bareshell-test/: .gitignore  Makefile  README.md  charmcraft.yaml
tests/fuzz/: README.md  fuzz_parser.py
tests/fuzz/corpus/: adjacent_quoting  backslash_escape  braced_var  double_quoted_var  mixed_quoting  pipe_command  pipe_with_flags  simple_command  tilde_expansion  variable_expansion
tests/integration/: __init__.py  conftest.py  test_socket.py
tests/spread/: lib.sh
tests/spread/broken-pipe-sigpipe-exit/: task.yaml
tests/spread/cat-missing-file-errors/: task.yaml
tests/spread/cat-multiple-files-concatenated/: task.yaml
tests/spread/cat-no-args-reads-stdin/: task.yaml
tests/spread/cat-single-file/: task.yaml
tests/spread/cd-absolute-path/: task.yaml
tests/spread/cd-into-file-errors/: task.yaml
tests/spread/cd-no-args-goes-home/: task.yaml
tests/spread/cd-relative-path/: task.yaml
tests/spread/cp-file-to-existing-dir/: task.yaml
tests/spread/cp-file-to-file/: task.yaml
tests/spread/cp-missing-source-errors/: task.yaml
tests/spread/double-quoted-tilde-is-literal/: task.yaml
tests/spread/double-quotes-expand-var/: task.yaml
tests/spread/echo-empty-string-arg/: task.yaml
tests/spread/echo-empty-string-arg-divergence/: task.yaml
tests/spread/echo-multiple-args/: task.yaml
tests/spread/echo-no-args/: task.yaml
tests/spread/echo-no-args-divergence/: task.yaml
tests/spread/env-lists-tracked-variables/: task.yaml
tests/spread/exit-default-zero/: task.yaml
tests/spread/exit-non-numeric-arg-divergence/: task.yaml
tests/spread/exit-with-code/: task.yaml
tests/spread/expand-no-expansion-in-single-quotes/: task.yaml
tests/spread/expand-single-quotes-divergence/: task.yaml
tests/spread/expand-tilde-alone/: task.yaml
tests/spread/expand-tilde-not-at-word-start/: task.yaml
tests/spread/expand-tilde-prefix/: task.yaml
tests/spread/expand-unknown-var-empty/: task.yaml
tests/spread/expand-var-braces/: task.yaml
tests/spread/expand-var-dollar/: task.yaml
tests/spread/find-by-name-pattern/: task.yaml
tests/spread/find-by-type-directory/: task.yaml
tests/spread/find-by-type-file/: task.yaml
tests/spread/grep-basic-match-exit-0/: task.yaml
tests/spread/grep-case-insensitive-i/: task.yaml
tests/spread/grep-count-c/: task.yaml
tests/spread/grep-invalid-pattern-divergence/: task.yaml
tests/spread/grep-invert-v/: task.yaml
tests/spread/grep-line-numbers-n/: task.yaml
tests/spread/grep-multiple-files-prefixed/: task.yaml
tests/spread/grep-no-match-exit-1/: task.yaml
tests/spread/head-default-10-lines/: task.yaml
tests/spread/head-missing-file-errors/: task.yaml
tests/spread/head-n-flag/: task.yaml
tests/spread/logs-over-socket-without-pebble-binary/: task.yaml
tests/spread/ls-a-shows-hidden/: task.yaml
tests/spread/ls-default-no-hidden/: task.yaml
tests/spread/ls-multiple-operands-headered/: task.yaml
tests/spread/mixed-quoting-within-word/: task.yaml
tests/spread/mkdir-create/: task.yaml
tests/spread/mkdir-existing-errors/: task.yaml
tests/spread/mkdir-p-creates-parents/: task.yaml
tests/spread/mkdir-p-existing-ok/: task.yaml
tests/spread/mv-into-existing-dir/: task.yaml
tests/spread/mv-rename/: task.yaml
(+46 files in other folders)
