[project]
name = "cascade"
version = "0.1.0.dev0"
description = "A natural shell for debugging Juju Kubernetes workload containers via Pebble"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Canonical Ltd."},
]
keywords = ["juju", "pebble", "kubernetes", "charm", "shell", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "ops>=2.0.0,<4",
    "pebble-shimmer>=1.0.0b2",
    "prompt_toolkit>=3.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff==0.15.14",
    "ty==0.0.38",
    "tox>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
cascade = "cascade.cli:main"

[project.urls]
Homepage = "https://github.com/canonical/cascade"
Repository = "https://github.com/canonical/cascade"
"Bug Tracker" = "https://github.com/canonical/cascade/issues"

[tool.uv.sources]
# Dev-local override: resolve `pebble-shimmer` from the sibling shimmer checkout
# instead of PyPI, so shimmer gaps can be co-developed in place. This is uv-only
# metadata (not part of the built wheel). REMOVE before publishing / once shimmer
# is canonical-owned — the [project] `pebble-shimmer>=1.0.0b2` above is the real,
# published dependency. Requires a sibling checkout at ../shimmer.
pebble-shimmer = { path = "../shimmer", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["cascade"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real pebble binary (deselect with '-m \"not integration\"')",
    "requires_juju: marks tests that require a live Juju controller",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if False:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
