[project]
name = "borescope"
version = "1.1.0"
description = "A natural shell for debugging Juju Kubernetes workload containers via Pebble"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Tony Meyer", email = "borescope@aotearoa.dev"},
]
keywords = ["juju", "pebble", "kubernetes", "charm", "shell", "debugging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "ops>=2.0.0,<4",
    "pebble-shimmer>=1.0.0",
    "prompt_toolkit>=3.0",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "atheris>=2.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff==0.15.21",
    "ty==0.0.59",
    "pre-commit>=3.0.0",
]
docs = [
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "PyYAML>=6.0",
]

[project.scripts]
borescope = "borescope.cli:main"

[project.urls]
Homepage = "https://github.com/tonyandrewmeyer/borescope"
Repository = "https://github.com/tonyandrewmeyer/borescope"
"Bug Tracker" = "https://github.com/tonyandrewmeyer/borescope/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/borescope"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# Ruff configuration
[tool.ruff]
line-length = 99
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# CPY (flake8-copyright) currently requires preview mode.
preview = true
explicit-preview-rules = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001",
    # pep8-naming
    "N",
    # flake8-builtins
    "A",
    # flake8-copyright
    "CPY001",
    # pyupgrade
    "UP",
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # Ruff-specific
    "RUF",
    # Perflint
    "PERF",
    # pydocstyle
    "D",
    # flake8-future-annotations
    "FA",
    # flake8-type-checking
    "TC",
]
ignore = [
    # Line too long: handled by the formatter.
    "E501",
    # Don't force imports into TYPE_CHECKING blocks.
    "TC001",
    "TC002",
    "TC003",
    # assert is fine.
    "S101",
    # Magic methods and __init__ don't need docstrings.
    "D105",
    "D107",
    # subprocess call: check for execution of untrusted input. False-positive heavy.
    "S603",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id", "min", "map", "range", "type", "input", "format", "exit", "help"]

[tool.ruff.lint.flake8-copyright]
notice-rgx = "(?i)Copyright \\d{4} Tony Meyer"

[tool.ruff.lint.per-file-ignores]
# Command classes are self-documenting via their ``name``/``summary``/``usage``
# attributes; a docstring would only restate ``summary``.
"src/borescope/shell/commands/*.py" = [
    "D101",
    "D102",
]
# Transport is a structural ``Protocol`` mirroring ``ops.pebble.Client``; the
# upstream API is the docstring.
"src/borescope/transport/__init__.py" = [
    "D102",
]
"tests/*" = [
    # Docstrings aren't required in tests.
    "D",
    # Hard-coded "secrets" are fine in tests.
    "S105",
    "S106",
]
"tests/**/*" = [
    "D",
    "S105",
    "S106",
]
# The docs build script intentionally keeps two things ruff would flag:
"docs/src/_build.py" = [
    # The entity-rewrite table maps literal "ambiguous" Unicode characters
    # (en dash, curly quotes, ...) to HTML entities — they must stay as-is.
    "RUF001",
    # Jinja2 autoescape is deliberately off: the body is trusted, already-
    # rendered HTML, and escaping it would double-encode the docs.
    "S701",
]

[tool.ruff.lint.isort]
known-first-party = ["borescope"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real pebble binary (deselect with '-m \"not integration\"')",
    "requires_juju: marks tests that require a live Juju controller",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if False:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING:",
]
show_missing = true
precision = 2
